# nattydate

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SKILL.md  debug.rs  rust-toolchain.toml  setup_tests.py  test_parse  tests.json  update_main.py
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
